Fixed modal visibility

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -424,28 +424,36 @@ input[type="email"]:hover {
 /*  LOGIN MODAL                                          */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
+.modal,
+.login__container {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+}
+
 .modal {
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background: transparent;
     backdrop-filter: blur(20px);
-    /* transform: scale(0); */
-    transition: transform 0.5s ease, height 0.2s ease;
+    transition: all 0.5s ease;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
-.modal.active-popup {
-    transform: scale(1);
+.modal.active-popup,
+.login__container.active-popup {
+    visibility: visible;
+    opacity: 1;
 }
 
 .login__container {
-    position: relative;
     width: 400px;
     height: 440px;
-    background: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
@@ -453,12 +461,12 @@ input[type="email"]:hover {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    /* transform: scale(0); */
-    transition: transform 0.5s ease, height 0.2s ease;
-}
-
-.login__container.active-popup {
-    transform: scale(1);
+    transition: all 0.5s ease;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
 }
 
 .login__container .form-box {
